Fixed bg image of lesson 3 and updated the more recent lesson links

--- a/index.html
+++ b/index.html
@@ -159,30 +159,27 @@
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="./17LessonSeventeen/in-class-project/index.html"> Class Project</a></li>
-          <li><a href="./17LessonSeventeen/homework/index.html"> Homework</a></li>
         </ul>
       </li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 18
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="./18LessonEighteen/in-class-project/index.html"> Class Project</a></li>
-          <li><a href="./18LessonEighteen/homework/index.html"> Homework</a></li>
+          <li><a>None</a></li>
         </ul>
       </li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 19
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="./19LessonNineteen/in-class-project/index.html"> Class Project</a></li>
-          <li><a href="./19LessonNineteen/homework/index.html"> Homework</a></li>
+          <li><a>None</a></li>
         </ul>
       </li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 20
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="./20FinalProject/index.html"> Final Project</a></li>
+          <li><a href="https://soapej.github.io/"> Final Project</a></li>
         </ul>
       </li>
     </ul>
@@ -347,17 +344,12 @@
           <h3 class="text-center">Lesson 17</h3>
           <div class="row links">
             <a class="project pr17" href="./17LessonSeventeen/in-class-project/index.html">Class Project</a>
-            <a href="./17LessonSeventeen/homework/index.html" class="homework hw17 pull-right">Homework</a>
           </div>
         </div>
 
         <!--      EIGHTEEN     -->
         <div class="lesson eighteen col-xs-6">
           <h3 class="text-center">Lesson 18</h3>
-          <div class="row links">
-            <a class="project pr18" href="./18LessonEighteen/in-class-project/index.html">Class Project</a>
-            <a href="./18LessonEighteen/homework/index.html" class="homework hw18 pull-right">Homework</a>
-          </div>
         </div>
       </div>
 
@@ -365,10 +357,6 @@
         <!--      NINETEEN     -->
         <div class="lesson nineteen col-xs-6">
           <h3 class="text-center">Lesson 19</h3>
-          <div class="row links">
-            <a class="project pr19" href="./19LessonNineteen/in-class-project/index.html">Class Project</a>
-            <a href="./19LessonNineteen/homework/index.html" class="homework hw19 pull-right">Homework</a>
-          </div>
         </div>
 
         <!--      TWENTY     -->
